# AnsibleDemo

./: .gitignore  Makefile  README.md  gen_ansible_doc.py  playbook.yaml  playbook.yml  pyproject.toml  task.yaml
.github/workflows/: ansible_doc.yml
ansible/demo/: README.md  galaxy.yml
ansible/demo/playbooks/: demo.yaml
ansible/demo/roles/test/defaults/: main.yml
ansible/demo/roles/test/tasks/: main.yml
ansible/demo/roles/test/templates/: filter.jinja2  my_tpl.jinja2  ref.jinja2
ansible/demo/roles/test/vars/: main.yml  third.yml
completion/: filter.yaml  playbook_module.yaml  playbook_module_options.yaml  playbook_module_vars.yaml  task_module.yaml  task_module_options.yaml  vars.yaml
