[tool.poetry]
name = "ansibledemo"
version = "0.1.0"
description = ""
authors = ["valbendan <valbendan@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

ansible = ">=5.2,<6.0"

[tool.poetry.dev-dependencies]

typer = ">=0.4,<1.0"
black = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
